Fix: Removing deprecated Husky configuration in package.json

--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write \"**/*.{css,scss,jsx,tsx,ts}\"",
     "fakeserver": "yarn json-server --watch ./src/pages/api/mock.json --port 3333",
-    "postinstall": "husky install"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
