--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "styled-components": "5.3.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.2",
+    "@commitlint/config-conventional": "^18.4.2",
     "@typescript-eslint/eslint-plugin": "5.0.0",
+    "commitizen": "^4.3.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-import": "2.27.5",
@@ -47,5 +50,10 @@
     "lint-staged": "^13.1.0",
     "prettier": "2.8.3",
     "typescript": "4.9.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
